monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4021/A4021.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4021;

grammar A4021 {


 astrule A;


}
